--- a/Resnet50.ipynb
+++ b/Resnet50.ipynb
@@ -6,244 +6,57 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Filename</th>\n",
-       "      <th>Label</th>\n",
-       "      <th>ClassName</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>16257</td>\n",
-       "      <td>AnnualCrop/AnnualCrop_142.jpg</td>\n",
-       "      <td>0</td>\n",
-       "      <td>AnnualCrop</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3297</td>\n",
-       "      <td>HerbaceousVegetation/HerbaceousVegetation_2835...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>HerbaceousVegetation</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>17881</td>\n",
-       "      <td>PermanentCrop/PermanentCrop_1073.jpg</td>\n",
-       "      <td>6</td>\n",
-       "      <td>PermanentCrop</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2223</td>\n",
-       "      <td>Industrial/Industrial_453.jpg</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Industrial</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4887</td>\n",
-       "      <td>HerbaceousVegetation/HerbaceousVegetation_1810...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>HerbaceousVegetation</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18895</th>\n",
-       "      <td>4498</td>\n",
-       "      <td>HerbaceousVegetation/HerbaceousVegetation_1952...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>HerbaceousVegetation</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18896</th>\n",
-       "      <td>1149</td>\n",
-       "      <td>Pasture/Pasture_1252.jpg</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pasture</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18897</th>\n",
-       "      <td>15489</td>\n",
-       "      <td>AnnualCrop/AnnualCrop_2332.jpg</td>\n",
-       "      <td>0</td>\n",
-       "      <td>AnnualCrop</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18898</th>\n",
-       "      <td>6287</td>\n",
-       "      <td>Residential/Residential_332.jpg</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Residential</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18899</th>\n",
-       "      <td>18613</td>\n",
-       "      <td>PermanentCrop/PermanentCrop_856.jpg</td>\n",
-       "      <td>6</td>\n",
-       "      <td>PermanentCrop</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>18900 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          ID                                           Filename  Label  \\\n",
-       "0      16257                      AnnualCrop/AnnualCrop_142.jpg      0   \n",
-       "1       3297  HerbaceousVegetation/HerbaceousVegetation_2835...      2   \n",
-       "2      17881               PermanentCrop/PermanentCrop_1073.jpg      6   \n",
-       "3       2223                      Industrial/Industrial_453.jpg      4   \n",
-       "4       4887  HerbaceousVegetation/HerbaceousVegetation_1810...      2   \n",
-       "...      ...                                                ...    ...   \n",
-       "18895   4498  HerbaceousVegetation/HerbaceousVegetation_1952...      2   \n",
-       "18896   1149                           Pasture/Pasture_1252.jpg      5   \n",
-       "18897  15489                     AnnualCrop/AnnualCrop_2332.jpg      0   \n",
-       "18898   6287                    Residential/Residential_332.jpg      7   \n",
-       "18899  18613                PermanentCrop/PermanentCrop_856.jpg      6   \n",
-       "\n",
-       "                  ClassName  \n",
-       "0                AnnualCrop  \n",
-       "1      HerbaceousVegetation  \n",
-       "2             PermanentCrop  \n",
-       "3                Industrial  \n",
-       "4      HerbaceousVegetation  \n",
-       "...                     ...  \n",
-       "18895  HerbaceousVegetation  \n",
-       "18896               Pasture  \n",
-       "18897            AnnualCrop  \n",
-       "18898           Residential  \n",
-       "18899         PermanentCrop  \n",
-       "\n",
-       "[18900 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "train=pd.read_csv('train.csv')\n",
-    "train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
-   "source": [
-    "num_classes=train['ClassName'].nunique()\n",
-    "print(num_classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\KARAN\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torchvision\\io\\image.py:13: UserWarning: Failed to load image Python extension: '[WinError 127] The specified procedure could not be found'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
-      "  warn(\n",
-      "c:\\Users\\KARAN\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "c:\\Users\\KARAN\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\transformers\\utils\\generic.py:441: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
-      "  _torch_pytree._register_pytree_node(\n"
+      "c:\\Users\\manje\\anaconda3\\envs\\torch\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
-    "from torch.utils.data import Dataset,DataLoader\n",
-    "from PIL import Image\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torchvision\n",
     "from torchvision import transforms\n",
-    "class CustomDataset(Dataset):\n",
-    "    def __init__(self,path,transform):\n",
-    "        self.data=pd.read_csv(path)\n",
-    "        self.transform=transform\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "        return len(self.data)\n",
-    "    \n",
-    "    def __getitem__(self, index):\n",
-    "        img_path=self.data.iloc[index,1]\n",
-    "        image=Image.open(img_path).convert('RGB')\n",
-    "        label=self.data.iloc[index,2]\n",
-    "        classname=self.data.iloc[index,3]\n",
-    "        \n",
-    "        if self.transform:\n",
-    "            image=self.transform(image)\n",
-    "            \n",
-    "        return image,label,classname\n",
-    "    \n",
-    "transform = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
-    "])\n",
+    "from torch.utils.data import DataLoader\n",
+    "from random import randint\n",
+    "from PIL import Image,ImageFile\n",
     "\n",
-    "path='train.csv'\n",
-    "train=CustomDataset(path,transform)"
+    "ImageFile.LOAD_TRUNCATED_IMAGES = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch.utils.data.dataloader.DataLoader at 0x1e6171c0290>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_loader=DataLoader(train,batch_size=64,shuffle=True)\n",
-    "train_loader"
+    "transforms = transforms.Compose([\n",
+    "    transforms.Resize((224,224)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485,0.456,0.406],std=[0.229,0.224,0.225]),\n",
+    "    transforms.RandomRotation(randint(1,360)),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "\n",
+    "])\n",
+    "train_path = \"./Final Dataset/train\"\n",
+    "test_path = \"./Final Dataset/test\"\n",
+    "val_path = \"./Final Dataset/val\"\n",
+    "def check_image(path):\n",
+    "    try:\n",
+    "        im = Image.open(path)\n",
+    "        return True\n",
+    "    except:\n",
+    "        return False\n",
+    "train_data = torchvision.datasets.ImageFolder(root=train_path,transform=transforms,is_valid_file=check_image)\n",
+    "test_data = torchvision.datasets.ImageFolder(root=test_path,transform=transforms,is_valid_file=check_image)\n",
+    "val_data = torchvision.datasets.ImageFolder(root=val_path,transform=transforms,is_valid_file=check_image)\n",
+    "batch_size = 64\n",
+    "num_classes = 10\n",
+    "train_loader = DataLoader(dataset=train_data,batch_size=batch_size,shuffle=True)\n",
+    "test_loader = DataLoader(dataset=test_data,batch_size=batch_size,shuffle=False)\n",
+    "val_loader = DataLoader(dataset=val_data,batch_size=batch_size/2,shuffle=True)"
    ]
   },
   {
@@ -675,21 +488,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path='validation.csv'\n",
-    "val=CustomDataset(path,transform)\n",
-    "val_loader=DataLoader(train,batch_size=32,shuffle=True)\n",
-    "\n",
-    "path='test.csv'\n",
-    "test=CustomDataset(path,transform)\n",
-    "test_loader=DataLoader(test,batch_size=64,shuffle=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -849,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
