--- a/googlenet_pre.ipynb
+++ b/googlenet_pre.ipynb
@@ -23,6 +23,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from random import shuffle\n",
+    "\n",
+    "\n",
     "transforms = transforms.Compose([\n",
     "    transforms.Resize((224,224)),\n",
     "    transforms.ToTensor(),\n",
@@ -30,64 +33,24 @@
     "    transforms.RandomRotation(randint(1,360)),\n",
     "    transforms.RandomHorizontalFlip(),\n",
     "\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_path = \"../Remote sensing paper/Final Dataset/train\"\n",
-    "test_path = \"../Remote sensing paper/Final Dataset/test\"\n",
-    "val_path = \"../Remote sensing paper/Final Dataset/val\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "])\n",
+    "train_path = \"./Final Dataset/train\"\n",
+    "test_path = \"./Final Dataset/test\"\n",
+    "val_path = \"./Final Dataset/val\"\n",
     "def check_image(path):\n",
     "    try:\n",
     "        im = Image.open(path)\n",
     "        return True\n",
     "    except:\n",
-    "        return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return False\n",
     "train_data = torchvision.datasets.ImageFolder(root=train_path,transform=transforms,is_valid_file=check_image)\n",
     "test_data = torchvision.datasets.ImageFolder(root=test_path,transform=transforms,is_valid_file=check_image)\n",
-    "val_data = torchvision.datasets.ImageFolder(root=val_path,transform=transforms,is_valid_file=check_image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "val_data = torchvision.datasets.ImageFolder(root=val_path,transform=transforms,is_valid_file=check_image)\n",
     "batch_size = 64\n",
-    "num_classes = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_loader = DataLoader(dataset=train_data,batch_size=batch_size)\n",
-    "test_loader = DataLoader(dataset=test_data,batch_size=batch_size)\n",
-    "val_loader = DataLoader(dataset=val_data,batch_size=batch_size)"
+    "num_classes = 10\n",
+    "train_loader = DataLoader(dataset=train_data,batch_size=batch_size,shuffle=True)\n",
+    "test_loader = DataLoader(dataset=test_data,batch_size=batch_size,shuffle=False)\n",
+    "val_loader = DataLoader(dataset=val_data,batch_size=batch_size/2,shuffle=True)"
    ]
   },
   {
@@ -101,51 +64,6 @@
     "    torch.cuda.empty_cache()\n",
     "else:\n",
     "    device = torch.device('cpu')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train(model, optimizer, loss_fn, train_loader, val_loader, epochs=2, aux_avai=False, device=device):\n",
-    "    for epoch in range(1, epochs+1):\n",
-    "        training_loss = 0.0\n",
-    "        valid_loss = 0.0\n",
-    "        model.train()\n",
-    "        for batch in train_loader:\n",
-    "            optimizer.zero_grad()\n",
-    "            inputs, targets = batch\n",
-    "            inputs = inputs.to(device)\n",
-    "            targets = targets.to(device)\n",
-    "            output = model(inputs)\n",
-    "            if aux_avai:\n",
-    "                loss = loss_fn(output, targets) + 0.3*loss_fn(aux1, targets) + 0.3*loss_fn(aux2, targets)\n",
-    "            else:\n",
-    "                loss = loss_fn(output, targets)\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "            training_loss += loss.data.item() * inputs.size(0)\n",
-    "        training_loss /= len(train_loader.dataset)\n",
-    "        \n",
-    "        model.eval()\n",
-    "        num_correct = 0 \n",
-    "        num_examples = 0\n",
-    "        for batch in val_loader:\n",
-    "            inputs, targets = batch\n",
-    "            inputs = inputs.to(device)\n",
-    "            output,_,_ = model(inputs)\n",
-    "            targets = targets.to(device)\n",
-    "            loss = loss_fn(output, targets) \n",
-    "            valid_loss += loss.data.item() * inputs.size(0)\n",
-    "            correct = torch.eq(torch.max(F.softmax(output, dim=1), dim=1)[1],targets)\n",
-    "            num_correct += torch.sum(correct).item()\n",
-    "            num_examples += correct.shape[0]\n",
-    "        valid_loss /= len(val_loader.dataset)\n",
-    "\n",
-    "        print('Epoch: {}, Training Loss: {:.2f}, Validation Loss: {:.2f}, accuracy = {:.2f}'.format(epoch, training_loss,\n",
-    "        valid_loss, num_correct / num_examples))"
    ]
   },
   {
@@ -535,7 +453,7 @@
    "source": [
     "optimizer = torch.optim.SGD(params=model.parameters(),lr=0.001,weight_decay=1e-4)\n",
     "\n",
-    "loss = nn.CrossEntropyLoss()\n",
+    "criterion = nn.CrossEntropyLoss()\n",
     "lr_scheduler = torch.optim.lr_scheduler.StepLR(optimizer=optimizer, step_size=20, gamma=0.1, last_epoch=-1,verbose=True)"
    ]
   },
@@ -545,7 +463,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train(model=model,optimizer=optimizer,loss_fn=loss,train_loader=train_loader,val_loader=val_loader,epochs=100,device=device)"
+    "from tqdm import tqdm\n",
+    "import numpy as np\n",
+    "num_epochs=100\n",
+    "device='cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "model.to(device)\n",
+    "\n",
+    "train_losses=[]\n",
+    "val_loss_min=np.Inf\n",
+    "\n",
+    "for epoch in tqdm(range(num_epochs)):\n",
+    "    train_loss = 0.0\n",
+    "    valid_loss = 0.0\n",
+    "    model.train()\n",
+    "    for _,(images,labels,_) in enumerate(tqdm(train_loader,desc=f'Epoch {epoch+1}')):\n",
+    "        images,labels=images.to(device),labels.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(images)\n",
+    "        loss = criterion(outputs,labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        train_loss += loss.item()*images.size(0)\n",
+    "    model.eval()\n",
+    "    for images,labels,_ in val_loader:\n",
+    "        images,labels=images.to(device),labels.to(device)\n",
+    "        output = model(images)\n",
+    "        loss = criterion(output, labels)\n",
+    "        valid_loss += loss.item()*images.size(0)\n",
+    "    \n",
+    "    train_loss = train_loss/len(train_loader.dataset)\n",
+    "    val_loss = valid_loss/len(val_loader.dataset)\n",
+    "    train_losses.append(train_loss)\n",
+    "        \n",
+    "    print(f'\\nTraining Loss: {train_loss:.4f} \\tValidation Loss: {val_loss:.4f}')\n",
+    "    if val_loss <= val_loss_min:\n",
+    "        torch.save(model.state_dict(), 'resnet50.pt')\n",
+    "        val_loss_min = val_loss"
    ]
   }
  ],
